# snowtrain

./: .gitignore  Cargo.toml  README.md
src/: compression.rs  dataload.rs  generation.rs  lib.rs  main.rs  score.rs
src/compression/: nibble.rs
